# Helius-Take-Home-Project

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  example_queries.sql
clickhouse/: schema_bundling.sql  schema_fee_by_type.sql  schema_fees.sql  schema_program_fees.sql  schema_transaction_age.sql
src/: lib.rs
src/analyzer/: bundling.rs  fee_by_type.rs  fee_landscape.rs  landing_services.rs  mod.rs  program_fee.rs  transaction_age.rs  types.rs  utils.rs
src/core/: block_analyzer.rs  block_fetcher.rs  main.rs  mod.rs  transaction_parser.rs
tests/: bundling_test.rs  fee_ordering_test.rs  primary_program_test.rs  program_name_test.rs
