[package]
name = "solana-block-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/core/main.rs"

[dependencies]
solana-client = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
tokio = { version = "1.37.0", features = ["full"] }
clickhouse = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
